# variegated-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  board-cfg.toml
.cargo/: config.toml
.github/: copilot-instructions.md
apec-r0d-functional-test/: Cargo.toml
apec-r0d-functional-test/src/: main.rs
examples/: Cargo.toml  build.rs
examples/.cargo/: config.toml
examples/dual-boiler/: LICENSE.md  board-cfg.toml
examples/dual-boiler/src/: main.rs
examples/single-boiler/: README.md  board-cfg.toml
examples/single-boiler/src/: main.rs  rotary.rs
gravity-r0a-functional-test/: Cargo.toml
gravity-r0a-functional-test/src/: main.rs
gravity-r2a-functional-test/: Cargo.toml
gravity-r2a-functional-test/src/: main.rs
open-lcc-board-features/: Cargo.toml
open-lcc-board-features/src/: lib.rs
open-lcc-board-r2a/: Cargo.toml
open-lcc-board-r2a/src/: lib.rs
open-lcc-controller/: Cargo.toml
open-lcc-controller-lib/: Cargo.toml
open-lcc-controller-lib/src/: lib.rs
open-lcc-controller/src/: main.rs
open-lcc-embassy-ads124s08/: Cargo.toml
open-lcc-embassy-ads124s08/src/: registers.rs
open-lcc-embassy-fdc1004/: Cargo.toml  README.md
open-lcc-gicar-8-5-04/: Cargo.toml
open-lcc-gicar-8-5-04/src/: lib.rs
open-lcc-machine-definition-lelit-bianca/: Cargo.toml
open-lcc-machine-definition-lelit-bianca/src/: lib.rs
open-lcc-serial-bootloader/: Cargo.toml
open-lcc-serial-bootloader/src/: main.rs  serial_flasher.rs
variegated-adc-tools/: Cargo.toml
variegated-adc-tools/src/: lib.rs
variegated-ads124s08/: Cargo.toml  README.md
variegated-ads124s08/examples/: basic_single_ended_measurement.rs
variegated-ads124s08/src/: lib.rs  registers.rs
variegated-board-apec/: Cargo.toml
variegated-board-apec/src/: bootloader_features.rs  lib.rs  normal_features.rs
variegated-board-features/: Cargo.toml
variegated-board-features/src/: lib.rs
variegated-board-gravity/: Cargo.toml
variegated-board-gravity/src/: lib.rs
variegated-board-open-lcc-r2a/: Cargo.toml
variegated-board-open-lcc-r2a/src/: lib.rs  normal_features.rs
variegated-control-algorithm/: Cargo.toml  LICENSE.md  README.md
variegated-control-algorithm/src/: lib.rs  pid.rs
variegated-controller/: Cargo.toml  memory.x
variegated-controller-gear-pump-silvia/: Cargo.toml  board_config.toml
variegated-controller-gear-pump-silvia/src/: controller.rs  demo_proto.rs  main.rs  state.rs
variegated-controller-gear-pump-silvia/src/actuator_cluster/: mod.rs  silvia_pwm_actuator_cluster.rs  silvia_shift_register_actuator_cluster.rs
variegated-controller-gear-pump-silvia/src/sensor_cluster/: mod.rs  silvia_adc_sensor_cluster.rs  silvia_gpio_sensor_cluster.rs  silvia_nau7802_sensor_cluster.rs  silvia_pio_frequency_counter.rs
variegated-controller-lib/: Cargo.toml
variegated-controller-lib/src/: lib.rs  routine.rs
variegated-controller-types/: Cargo.toml
variegated-controller-types/src/: lib.rs
variegated-controller/src/: main.rs
variegated-embassy-ads124s08/: Cargo.toml
variegated-embassy-ads124s08/src/: lib.rs  registers.rs
variegated-embassy-dual-c595-shift-register/: Cargo.toml
variegated-embassy-dual-c595-shift-register/src/: lib.rs
variegated-embassy-fdc1004/: Cargo.toml  README.md
variegated-embassy-fdc1004/src/: lib.rs
variegated-embassy-nau7802/: Cargo.toml  README.md
variegated-embassy-nau7802/src/: constants.rs  lib.rs
variegated-embassy-rp-frequency-counter/: Cargo.toml
variegated-embassy-rp-frequency-counter/src/: lib.rs
variegated-embassy-rp2040-double-tap/: Cargo.toml
variegated-embassy-rp2040-double-tap/src/: lib.rs
variegated-fdc1004/: Cargo.toml  README.md
variegated-fdc1004/examples/: basic_capacitance_reading.rs
variegated-fdc1004/src/: lib.rs
variegated-gicar-8-5-04/: Cargo.toml
variegated-gicar-8-5-04/src/: lib.rs
variegated-hal/: Cargo.toml  README.md
variegated-hal/src/: adc.rs  gpio.rs  lib.rs  machine_mechanism.rs
variegated-hal/src/adc/: ads124s08.rs
variegated-hal/src/gpio/: gpio_binary_heating_element.rs  gpio_command_sender.rs  gpio_pwm_frequency_counter.rs  gpio_pwm_pump.rs  gpio_three_way_solenoid.rs
variegated-hal/src/machine_mechanism/: single_boiler_mechanism.rs
variegated-log/: Cargo.toml
variegated-log/src/: lib.rs
variegated-machine-definition-gear-pump-silvia/: Cargo.toml
variegated-machine-definition-gear-pump-silvia/src/: actuator_cluster.rs  lib.rs
variegated-machine-definition-gear-pump-silvia/src/sensor_cluster/: mod.rs  silvia_adc_sensor_cluster.rs  silvia_gpio_sensor_cluster.rs
variegated-machine-definition-lelit-bianca/: Cargo.toml
variegated-machine-definition-lelit-bianca/src/: actuator_cluster.rs  lib.rs  sensor_cluster.rs
variegated-nau7802/: Cargo.toml  README.md
variegated-nau7802/examples/: basic_weight_measurement.rs
variegated-nau7802/src/: constants.rs  lib.rs
variegated-pio-i2c/: Cargo.toml
variegated-pio-i2c/src/: i2c_cmd.rs  lib.rs
variegated-serial-bootloader/: Cargo.toml  build.rs  build_config.toml  memory.x
variegated-serial-bootloader/src/: main.rs  serial_flasher.rs
variegated-soft-pwm/: Cargo.toml
variegated-soft-pwm/src/: lib.rs
