[workspace]
members = [
    "examples",
    "variegated-adc-tools",
    "variegated-controller-lib",
    "variegated-controller-types",
    "variegated-control-algorithm",
    "variegated-embassy-ads124s08",
    "variegated-embassy-dual-c595-shift-register",
    "variegated-embassy-fdc1004",
    "variegated-embassy-nau7802",
    "variegated-embassy-rp-frequency-counter",
    "variegated-hal",
    "variegated-log",
    "variegated-soft-pwm",
]
resolver = "2"
package = { rust-version = "1.85.0" }

[patch.crates-io]
embassy-rp = { git = "https://github.com/variegated-coffee/embassy", branch = "rp-0.4.0" }
