[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dual_boiler"
path = "dual-boiler/src/main.rs"
required-features = ["dual-boiler"]

[[bin]]
name = "single_boiler"
path = "single-boiler/src/main.rs"
required-features = ["single-boiler"]

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1.1"


defmt = "0.3"
defmt-rtt = "0.4"

embedded-alloc = { version = "0.5.1" }

static_cell = "2"

cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

num-traits = { version ="0.2.19", default-features = false, features = ["libm"] }

variegated-board-cfg = { version = "0.2.1" }

variegated-hal = { version = "0.1.0", path = "../variegated-hal", features = ["rp235xb"] }

variegated-embassy-ads124s08 = { version = "0.1.0", path = "../variegated-embassy-ads124s08" }
variegated-adc-tools = { version = "0.1.0", path = "../variegated-adc-tools" }
variegated-controller-lib = { version = "0.1.0", path = "../variegated-controller-lib" }
variegated-controller-types = { version = "0.1.0", path = "../variegated-controller-types" }

rotary-encoder-hal = { version = "0.6.0", features = ["table-decoder"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
oled_async = "0.1.0-alpha1"

serde = { version = "1.0.219", default-features = false, features = ["derive"] }
postcard = { version = "1.1.1", features = ["alloc"] }

[features]
default = ["rp235xb"]
rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]
dual-boiler = []
single-boiler = []