[package]
name = "open-lcc-machine-definition-lelit-bianca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open-lcc-controller-lib = { version = "0.1.0", path = "../open-lcc-controller-lib" }
heapless = "0.8.0"