[package]
name = "variegated-ads124s08"
version = "0.1.0"
edition = "2024"
description = "Async driver for the Texas Instruments ADS124S08 24-bit precision ADC"
repository = "https://github.com/variegated-coffee/variegated-rs"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "async", "ads124s08", "adc", "sensor"]
categories = ["embedded", "hardware-support"]

[lib]
test = false
bench = false

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-futures = { version = "0.1.0" }
paste = "1.0"

defmt = { version = "0.3", optional = true }
