[package]
name = "variegated-board-features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
variegated-embassy-dual-c595-shift-register = { path = "../variegated-embassy-dual-c595-shift-register", version = "0.1.0" }

[features]
qspi-settings-flash = []
4-bit-sdcard = []