[package]
name = "variegated-board-open-lcc-r2a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
variegated-board-features =  { version = "0.1.0", path = "../variegated-board-features" }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
static_cell = "2.1.0"

[features]
led-pwm = []
qspi-settings-flash = []
4-wire-sd-card = []