[package]
name = "variegated-control-algorithm"
version = "0.1.0"
authors = ["magnusnordlander", "Kxie"]
edition = "2021"
license = "MIT"
description = "A flexible PID controller"
readme = "README.md"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"], default-features = false }
defmt = { version = "0.3", optional = true }
num-traits = { version = "0.2.15", default-features = false } # features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`

[features]
serde = ["dep:serde"]
defmt = ["dep:defmt"]