[package]
name = "variegated-controller-gear-pump-silvia"
version = "0.1.0"
edition = "2021"

[build-dependencies]
toml = "0.5"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.2.0"}
embassy-boot-rp = { version = "0.2.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

hashbrown = "0.14.2"
embedded-alloc = { version = "0.5.1" }

cfg-if = "1.0.0"

variegated-board-features =  { version = "0.1.0", path = "../variegated-board-features" }
variegated-board-apec = { version = "0.1.0", path = "../variegated-board-apec", features = ["cn94-pwm"] }
variegated-controller-lib = { version = "0.1.0", path = "../variegated-controller-lib", features = ["apec-r0d"] }
variegated-log = { version = "0.1.0", path = "../variegated-log" }

variegated-embassy-dual-c595-shift-register = { version = "0.1.0", path = "../variegated-embassy-dual-c595-shift-register" }
variegated-embassy-ads124s08 = { version = "0.1.0", path = "../variegated-embassy-ads124s08" }
variegated-embassy-rp-frequency-counter = { version = "0.1.0", path = "../variegated-embassy-rp-frequency-counter" }
variegated-embassy-nau7802 = { version = "0.1.0", path = "../variegated-embassy-nau7802" }

variegated-soft-pwm = { version = "0.1.0", path = "../variegated-soft-pwm" }
pid-ctrl = "0.1.4"
heapless = "0.8.0"
async-trait = "0.1.80"
num-traits = { version ="0.2", default-features = false, features = ["libm"]}
fixed = "1.23.1"
fixed-macro = "1.2"

movavg = { version = "2", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0.0", features = ["alloc"] }