[package]
name = "variegated-controller-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.8.0"
async-trait = "0.1.80"
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
pid-ctrl = "0.1.4"
num-traits = { version ="0.2.19", default-features = false, features = ["libm"] }

defmt = "0.3"

cfg-if = "1.0.0"
variegated-hal = { version = "0.1.0", path = "../variegated-hal" }
