[package]
name = "variegated-embassy-ads124s08"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
paste = "1.0"


defmt = "0.3"
