[package]
name = "variegated-embassy-fdc1004"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-async = "1.0"
embassy-futures = "0.1.1"
ux = "0.1.0"
defmt = "0.3"
defmt-rtt = "0.4"
