[package]
name = "variegated-embassy-nau7802"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[features]
default = []

[dependencies]
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal-async = "1.0"
embassy-futures = "0.1.1"
ux = "0.1.0"
defmt = "0.3"
defmt-rtt = "0.4"
nb = "1"

[dependencies.byteorder]
version = "1.3.4"
default-features = false