[package]
name = "variegated-embassy-rp-frequency-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]  }
pio-proc = "0.3"
pio = "0.3.0"
pio-core = "0.3.0"
log = "0.4.22"
variegated-log = { version = "0.1.0", path = "../variegated-log" }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", featues = ["print-defmt"] }

[features]
default = []
rp2040 = ["embassy-rp/rp2040", "variegated-log/rp2040"]
rp235xa = ["embassy-rp/rp235xa", "variegated-log/rp235xa"]
rp235xb = ["embassy-rp/rp235xb", "variegated-log/rp235xb"]