[package]
name = "variegated-fdc1004"
version = "0.1.0"
edition = "2024"
description = "Async driver for the Texas Instruments FDC1004 Capacitance-to-Digital Converter"
repository = "https://github.com/variegated-coffee/variegated-rs"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "async", "fdc1004", "capacitance", "sensor"]
categories = ["embedded", "hardware-support"]

[lib]
test = false
bench = false

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
embedded-hal-async = "1.0"
ux = "0.1.0"
defmt = { version = "0.3", optional = true }
