[package]
name = "variegated-fdc1004"
version = "0.1.0"
edition = "2024"
description = "Async driver for the Texas Instruments FDC1004 Capacitance-to-Digital Converter"
repository = "https://github.com/variegated-coffee/variegated-rs"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "async", "fdc1004", "capacitance", "sensor"]
categories = ["embedded", "hardware-support"]

[lib]
test = false
bench = false

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
embedded-hal-async = "1.0"
ux = "0.1.0"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.4.0", features = ["defmt", "time-driver", "rp235xb"] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
