[package]
name = "variegated-gicar-8-5-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
variegated-controller-lib = { version = "0.1.0", path = "../variegated-controller-lib" }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
async-trait = "0.1.80"
libm = "0.2.1"
