[package]
name = "variegated-hal"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[dependencies]
variegated-soft-pwm = { version = "0.1.0", path = "../variegated-soft-pwm" }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.4.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
variegated-ads124s08 = { version = "0.1.0", path = "../variegated-ads124s08" }
variegated-adc-tools = { version = "0.1.0", path = "../variegated-adc-tools" }
defmt = "0.3"
async-trait = "0.1.88"
variegated-controller-types = { version = "0.1.0", path = "../variegated-controller-types" }
movavg = { version = "2.1.0", default-features = false }

[features]
rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]

