[package]
name = "variegated-log"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
log = "0.4"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-usb-logger = { version = "0.4.0"}
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

[features]
default = []
rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]