[package]
name = "variegated-machine-definition-lelit-bianca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = "0.3.0"
embassy-sync = "0.5.0"
variegated-board-features = { version = "0.1.0", path = "../variegated-board-features" }
variegated-controller-lib = { version = "0.1.0", path = "../variegated-controller-lib" }
variegated-soft-pwm = { version = "0.1.0", path = "../variegated-soft-pwm" }
variegated-gicar-8-5-04 = { version = "0.1.0", path = "../variegated-gicar-8-5-04" }
pid-ctrl = "0.1.4"
heapless = "0.8.0"
async-trait = "0.1.80"
num-traits = { version ="0.2", default-features = false, features = ["libm"]}