[package]
name = "variegated-pio-i2c"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
embedded-hal = { version = "1.0.0" }
embedded_hal_0_2 = { version = "0.2.6", package = "embedded-hal" }
embedded-hal-async = "1.0.0"
embassy-futures = "0.1.1"
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
nb = "1.0.0"
pio = "0.2.0"
pio-proc = "0.2.0"
rp2040-hal = "0.10.0"
fugit = "0.3.5"
defmt = { version = "0.3.0", optional = true }
either = { version = "1.10.0", default-features = false }
heapless = { version = "0.8.0", default-features = false }
fixed = "1.28.0"
rp-pac = "6.0.0"